--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,24 @@
-certifi==2022.9.24
-chardet==5.1.0
-charset-normalizer==3.0.1
-defusedxml==0.7.1
-gyp==0.1
-httpie==3.2.1
-idna==3.3
-isort==5.6.4
-markdown-it-py==2.1.0
-mdurl==0.1.2
-multidict==6.0.4
-ntpsec==1.2.2
-psutil==5.9.4
-psycopg2==2.9.5
-Pygments==2.14.0
-PySocks==1.7.1
-ranger-fm==1.9.3
-requests==2.28.1
-requests-toolbelt==0.10.1
-rich==13.3.1
-six==1.16.0
-toml==0.10.2
-urllib3==1.26.12
+alembic==1.13.1
+annotated-types==0.6.0
+anyio==4.3.0
+click==8.1.7
+fastapi==0.110.0
+greenlet==3.0.3
+h11==0.14.0
+httptools==0.6.1
+idna==3.6
+Mako==1.3.2
+MarkupSafe==2.1.5
+psycopg2-binary==2.9.9
+pydantic==2.6.4
+pydantic_core==2.16.3
+python-dotenv==1.0.1
+PyYAML==6.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.29
+starlette==0.36.3
+typing_extensions==4.10.0
+uvicorn==0.29.0
+uvloop==0.19.0
+watchfiles==0.21.0
+websockets==12.0
