--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 alembic==1.13.1
 annotated-types==0.6.0
 anyio==4.3.0
+bcrypt==4.1.2
+cffi==1.16.0
 click==8.1.7
+cryptography==42.0.5
+ecdsa==0.18.0
 fastapi==0.110.0
 greenlet==3.0.3
 h11==0.14.0
@@ -9,11 +13,19 @@ httptools==0.6.1
 idna==3.6
 Mako==1.3.2
 MarkupSafe==2.1.5
+passlib==1.7.4
+psycopg==3.1.18
 psycopg2-binary==2.9.9
+pyasn1==0.6.0
+pycparser==2.22
 pydantic==2.6.4
+pydantic-settings==2.2.1
 pydantic_core==2.16.3
 python-dotenv==1.0.1
+python-jose==3.3.0
 PyYAML==6.0.1
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.29
 starlette==0.36.3
