--- a/alembic.ini
+++ b/alembic.ini
@@ -61,8 +61,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # output_encoding = utf-8
 
 #sqlalchemy.url = postgresql://postgres:temporal123@localhost:5432/hr_app
-#sqlalchemy.url = postgresql://hr_app_iafa_user:CBnRTPzHsJh2fiLnWCaxSzzqpNbR2P75@dpg-co6b3v8l6cac73a6fsj0-a.oregon-postgres.render.com/hr_app_iafa
-sqlalchemy.url = postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}
+sqlalchemy.url = postgresql://hr_app_iafa_user:CBnRTPzHsJh2fiLnWCaxSzzqpNbR2P75@dpg-co6b3v8l6cac73a6fsj0-a.oregon-postgres.render.com/hr_app_iafa
+#sqlalchemy.url = postgresql://{DB_USER}:{DB_PASSWORD}@{DB_HOST}:{DB_PORT}/{DB_NAME}
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
